Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44686

SVG icons not rendered in OS X 10.10 systray (Regression)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.1
    • 5.4.0, 5.4.1
    • QPA
    • None
    • OS X 10.10, Xcode 6.1.1, Apple LLVM version 6.0 (clang-600.0.56) (based on LLVM 3.5svn)
    • macOS
    • 22f3d359350fd65e4bbe2e9420fcc4460e8a590a

      I'm developing a multi-platform application that is using a systray icon in SVG format.

      Everything worked fine under Qt 4.x and Qt 5.x until Qt 5.3.2 but since Qt 5.4.0 (so including 5.4.1), my SVG icon is completely invisible, nothing is displayed in systray, but the space is reserved because I can click on the "blank" icon.

      I wrote a minimal test case to reproduce the bug.

      I tried it under OS X 10.10 compiled with some Qt versions :

      • Qt 4.8.6 - working
      • Qt 5.2.1 - working
      • Qt 5.3.2 - working
      • Qt 5.4.0 - broken
      • Qt 5.4.1 - broken

      In all cases, I compiled Qt 5 myself in static with :

      ./configure -qt-harfbuzz -release -opensource -openssl-linked -opengl desktop -static -nomake examples -nomake tests -nomake tools -system-zlib -system-libpng -system-libjpeg -no-c++11 -confirm-license -no-glib -no-icu -I /opt/local/include -L /opt/local/lib

      For 3rd party libraries (zlib, libpng and libjpeg), I'm using those from MacPorts.

        For Gerrit Dashboard: QTBUG-44686
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            kervala Cédric OCHS
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes